2008-10-10  David Hyatt  <hyatt@apple.com>

        Add test for scrollbar buttons and track supporting increment/decrement/start/end.

        Reviewed by Adam Roben

        * platform/mac/scrollbars/scrollbar-buttons-expected.checksum: Added.
        * platform/mac/scrollbars/scrollbar-buttons-expected.png: Added.
        * platform/mac/scrollbars/scrollbar-buttons-expected.txt: Added.
        * scrollbars/scrollbar-buttons.html: Added.

2008-10-09  David Hyatt  <hyatt@apple.com>

        Add layout test for scrollbars honoring orientation and window active state.

        Reviewed by Tim Hatcher

        * platform/mac/scrollbars/scrollbar-orientation-expected.checksum: Added.
        * platform/mac/scrollbars/scrollbar-orientation-expected.png: Added.
        * platform/mac/scrollbars/scrollbar-orientation-expected.txt: Added.
        * scrollbars/scrollbar-orientation.html: Added.

2008-10-09  David Hyatt  <hyatt@apple.com>

        Add test case for disabled scrollbars.

        Reviewed by Tim Hatcher

        * platform/mac/scrollbars/disabled-scrollbar-expected.checksum: Added.
        * platform/mac/scrollbars/disabled-scrollbar-expected.png: Added.
        * platform/mac/scrollbars/disabled-scrollbar-expected.txt: Added.
        * scrollbars/disabled-scrollbar.html: Added.

2008-10-09  David Hyatt  <hyatt@apple.com>

        Land layout test for CSS scrollbars.

        Reviewed by Oliver Hunt

        * platform/mac/scrollbars: Added.
        * platform/mac/scrollbars/basic-scrollbar-expected.checksum: Added.
        * platform/mac/scrollbars/basic-scrollbar-expected.png: Added.
        * platform/mac/scrollbars/basic-scrollbar-expected.txt: Added.
        * scrollbars: Added.
        * scrollbars/basic-scrollbar.html: Added.

2008-10-09  Eric Seidel  <eric@webkit.org>

        Reviewed by Oliver Hunt.

        Test cases for https://bugs.webkit.org/show_bug.cgi?id=21498

        * fast/canvas/gradient-with-clip-expected.txt: Added.