@@ -53,7 +53,6 @@ public:
 
     virtual bool shouldFireEvents() const { return true; }
     
-    bool hasKeyframes() const { return m_keyframes.size() >= 2; }
     bool hasAnimationForProperty(int property) const;
     
     const RenderStyle* unanimatedStyle() const { return m_unanimatedStyle; }
